2006-05-10 arne

	* quartz: moved CBitmap completly to Image I/O in Mac OS X >= 10.4. The downside is, that you can only set the transparent color once.
	* CBitmap::setTransparentColor needs to be called explicilty now. The default behaviour is now that there's no transparent color initially.
	* removed BEOS code
	* when changeing the size of the container in CScrollView another parameter controls if the visible area should stay the same.
	* new working implementation of CSplashScreen

2006-04-28 arne

	* more bugfixes for CScrollView
	* quartz: some changes to line and rect drawing (offset the transformation matrix by 0.5,0.5 for better visibility)
	* the mouse move message is now propageted to the underlying view even if no mouse button is pressed

2006-04-13 arne

	* new files vstguidebug.cpp/.h
	* bitmaps can be loaded by id or by name now
	* loose focus bugfix (the loose focus message is now propagated threw all parent views as long as the message is not processed)
	* cleaned up mouseOverView code in CFrame/CViewContainer
	* bugfix for CFrame::setSize
	* some bugfixes for CScrollView and CScrollBar
	
2006-01-15 arne

	* Font changes: CFont removed. New CFontDesc class for custom fonts. You need to change all references of CFont to CFontRef.
	* add UTF-8 text drawing with GDI+
	* more doxygen docu

2006-01-06 arne

	* remove old drawing code. VSTGUI draws only when the system calls it to do so.
	* changed CViewContainer addView and removeView to return a bool value
	
2005-12-21 arne

	* new function CDrawContext::scrollRect
	* minor fixes to CScrollView
	* fixed 3D drawing in CParamDisplay (was drawing outside its bounds)

2005-12-19 arne

	* per default USE_NAMESPACE is 1 now if you don't define it
	* some more deprecated functions in CDrawContext
	* moved VSTGUIEditorInterface and CDropTarget into VSTGUI namespace

2005-12-16 arne

	* CControl::getTag() is virtual now
	* fixed some stuff with CDrawContext inside the DEPRECATED functions